bk_ida/gccida/g0/ix86_asm_file_end
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_asm_file_end/src/i386.c:4334:10: error: use of undeclared identifier 'unk_77B7C0'
fwrite( &unk_77B7C0, 1uLL, 2uLL, file); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_asm_file_end/src/obj/i386.o] Error 1
